synchronizing with release 4.3.2